[gd_scene load_steps=31 format=2]

[ext_resource path="res://stages/ending/EndingStage.gd" type="Script" id=1]
[ext_resource path="res://gui/fonts/FontHeading.tres" type="DynamicFont" id=4]
[ext_resource path="res://gui/theme.tres" type="Theme" id=5]
[ext_resource path="res://stages/ending/Steam-Emblem.png" type="Texture" id=6]
[ext_resource path="res://gui/fonts/FontLarge.tres" type="DynamicFont" id=7]
[ext_resource path="res://stages/ending/sword.webm" type="VideoStream" id=8]
[ext_resource path="res://stages/ending/Discord-Logo.png" type="Texture" id=9]
[ext_resource path="res://stages/ending/World8SketchColor4Example.png" type="Texture" id=10]
[ext_resource path="res://stages/ending/4 10-16-04-1833.png" type="Texture" id=11]
[ext_resource path="res://stages/ending/0 10-16-03-175.png" type="Texture" id=12]
[ext_resource path="res://stages/ending/1 10-16-03-4231.png" type="Texture" id=13]
[ext_resource path="res://stages/ending/2 10-16-03-6773.png" type="Texture" id=14]
[ext_resource path="res://stages/ending/3 10-16-03-9313.png" type="Texture" id=15]
[ext_resource path="res://stages/ending/13 10-16-06-4343.png" type="Texture" id=16]
[ext_resource path="res://stages/ending/7 10-16-04-9353.png" type="Texture" id=17]
[ext_resource path="res://stages/ending/11 10-16-05-9283.png" type="Texture" id=18]
[ext_resource path="res://stages/ending/9 10-16-05-4303.png" type="Texture" id=19]
[ext_resource path="res://stages/ending/10 10-16-05-6793.png" type="Texture" id=20]
[ext_resource path="res://stages/ending/12 10-16-06-1803.png" type="Texture" id=21]
[ext_resource path="res://stages/ending/16 10-16-07-1933.png" type="Texture" id=22]
[ext_resource path="res://stages/ending/14 10-16-06-6923.png" type="Texture" id=23]
[ext_resource path="res://stages/ending/15 10-16-06-9433.png" type="Texture" id=24]
[ext_resource path="res://stages/ending/5 10-16-04-4353.png" type="Texture" id=25]
[ext_resource path="res://stages/ending/17 10-16-07-4403.png" type="Texture" id=26]
[ext_resource path="res://stages/ending/8 10-16-05-1793.png" type="Texture" id=27]
[ext_resource path="res://stages/ending/6 10-16-04-6843.png" type="Texture" id=28]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.035473, 0.491554, 0.805743, 0.934122, 0.969595, 1 )
colors = PoolColorArray( 0.705882, 0.352941, 0.25098, 0, 0.705882, 0.352941, 0.25098, 1, 1, 0.666667, 0.368627, 1, 0.403922, 0.235294, 0.431373, 1, 0.27451, 0.145098, 0.317647, 1, 1, 0.92549, 0.839216, 1, 1, 0.92549, 0.839216, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 960, 540, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
color_ramp = SubResource( 2 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 25 ), ExtResource( 28 ), ExtResource( 17 ), ExtResource( 27 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 16 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 22 ), ExtResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="EndingStage" type="Node"]
script = ExtResource( 1 )

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Canvas"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0705882, 0.0666667, 0.160784, 1 )

[node name="Particles2D" type="Particles2D" parent="Canvas"]
position = Vector2( 960, 540 )
amount = 200
lifetime = 10.0
preprocess = 10.0
process_material = SubResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="Canvas"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4
theme = ExtResource( 5 )
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Canvas/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 1880.0
margin_bottom = 1040.0
size_flags_horizontal = 5
custom_constants/separation = 40
alignment = 1

[node name="Label" type="Label" parent="Canvas/MarginContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 1840.0
margin_bottom = 104.0
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "ending.thankyoumessage"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Canvas/MarginContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 1840.0
margin_bottom = 169.0

[node name="Label2" type="Label" parent="Canvas/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 1840.0
margin_bottom = 25.0
theme = ExtResource( 5 )
text = "ending.appreciationmessage"
align = 1
autowrap = true

[node name="VBoxContainer3" type="VBoxContainer" parent="Canvas/MarginContainer/VBoxContainer"]
margin_top = 209.0
margin_right = 1840.0
margin_bottom = 668.0
custom_constants/separation = 10

[node name="Label3" type="Label" parent="Canvas/MarginContainer/VBoxContainer/VBoxContainer3"]
margin_right = 1840.0
margin_bottom = 25.0
theme = ExtResource( 5 )
text = "ending.teasemessage"
align = 1
autowrap = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Canvas/MarginContainer/VBoxContainer/VBoxContainer3"]
margin_left = 215.0
margin_top = 35.0
margin_right = 1624.0
margin_bottom = 459.0
size_flags_horizontal = 4
size_flags_vertical = 6
custom_constants/separation = 50

[node name="PanelContainer" type="PanelContainer" parent="Canvas/MarginContainer/VBoxContainer/VBoxContainer3/HBoxContainer2"]
margin_right = 624.0
margin_bottom = 424.0

[node name="VideoPlayer" type="VideoPlayer" parent="Canvas/MarginContainer/VBoxContainer/VBoxContainer3/HBoxContainer2/PanelContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 612.0
margin_bottom = 412.0
rect_min_size = Vector2( 600, 400 )
stream = ExtResource( 8 )
volume_db = -80.0
autoplay = true

[node name="PanelContainer2" type="PanelContainer" parent="Canvas/MarginContainer/VBoxContainer/VBoxContainer3/HBoxContainer2"]
margin_left = 674.0
margin_right = 1409.0
margin_bottom = 424.0

[node name="WorldTexture" type="TextureRect" parent="Canvas/MarginContainer/VBoxContainer/VBoxContainer3/HBoxContainer2/PanelContainer2" groups=["unstyled"]]
margin_left = 12.0
margin_top = 12.0
margin_right = 723.0
margin_bottom = 412.0
texture = ExtResource( 10 )

[node name="PanelContainer3" type="PanelContainer" parent="Canvas/MarginContainer/VBoxContainer/VBoxContainer3/HBoxContainer2"]
visible = false
margin_left = 1160.0
margin_right = 1184.0
margin_bottom = 424.0

[node name="TextureRect" type="AnimatedSprite" parent="Canvas/MarginContainer/VBoxContainer/VBoxContainer3/HBoxContainer2/PanelContainer3" groups=["unstyled"]]
frames = SubResource( 5 )

[node name="VBoxContainer2" type="VBoxContainer" parent="Canvas/MarginContainer/VBoxContainer"]
margin_top = 708.0
margin_right = 1840.0
margin_bottom = 961.0

[node name="WishlistButton" type="Button" parent="Canvas/MarginContainer/VBoxContainer/VBoxContainer2"]
margin_left = 660.0
margin_right = 1180.0
margin_bottom = 82.0
rect_min_size = Vector2( 520, 0 )
size_flags_horizontal = 4
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 7 )
text = "ending.wishlistonsteam"
icon = ExtResource( 6 )

[node name="DiscordButton" type="Button" parent="Canvas/MarginContainer/VBoxContainer/VBoxContainer2"]
margin_left = 660.0
margin_top = 98.0
margin_right = 1180.0
margin_bottom = 180.0
rect_min_size = Vector2( 520, 0 )
size_flags_horizontal = 4
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 7 )
text = "ending.feedbackondiscord"
icon = ExtResource( 9 )

[node name="EndButton" type="Button" parent="Canvas/MarginContainer/VBoxContainer/VBoxContainer2"]
margin_left = 660.0
margin_top = 196.0
margin_right = 1180.0
margin_bottom = 253.0
rect_min_size = Vector2( 520, 0 )
size_flags_horizontal = 4
text = "ending.backtomainmenu"

[node name="Tween" type="Tween" parent="."]

[node name="WorldTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="finished" from="Canvas/MarginContainer/VBoxContainer/VBoxContainer3/HBoxContainer2/PanelContainer/VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="pressed" from="Canvas/MarginContainer/VBoxContainer/VBoxContainer2/WishlistButton" to="." method="_on_WishlistButton_pressed"]
[connection signal="pressed" from="Canvas/MarginContainer/VBoxContainer/VBoxContainer2/DiscordButton" to="." method="_on_DiscordButton_pressed"]
[connection signal="pressed" from="Canvas/MarginContainer/VBoxContainer/VBoxContainer2/EndButton" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="WorldTimer" to="." method="_on_WorldTimer_timeout"]
